docs: 统一文档中“悬案”表述为“问题”并精简部分内容